--- a/raffle-microservice/raffle-service/pom.xml
+++ b/raffle-microservice/raffle-service/pom.xml
@@ -59,7 +59,8 @@
 	    <dependency>
 			<groupId>com.sap.db.jdbc</groupId>
 			<artifactId>ngdbc</artifactId>
-			<version>4.1</version> 	
+			<version>2.3.58</version>
+			<!-- <version>4.1</version> -->	
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
