--- a/raffle-microservice/raffle-service/src/main/resources/application-openshift.properties
+++ b/raffle-microservice/raffle-service/src/main/resources/application-openshift.properties
@@ -1,9 +1,9 @@
 # [ Database Configuration Section ]
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:sap://{host:port}
+spring.datasource.url=jdbc:sap://nuc3.rhdemo.io:39015
 spring.datasource.driver-class-name=com.sap.db.jdbc.Driver
-spring.datasource.username={sap_hana_username}
-spring.datasource.password={sap_hana_password}
+spring.datasource.username=SYSTEM
+spring.datasource.password=System123
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.HANARowStoreDialect
